<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<!-- Copyright (c) K Team. All Rights Reserved. -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.runtimeverification.k</groupId>
  <artifactId>parent</artifactId>
  <packaging>pom</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>K Framework Tool Parent</name>

  <modules>
    <module>kore</module>
    <module>kernel</module>
    <module>k-distribution</module>
    <module>haskell-backend</module>
    <module>hs-backend-booster</module>
    <module>llvm-backend</module>
    <module>llvm-backend/src/main/native/llvm-backend/matching</module>
  </modules>

  <scm>
    <connection>scm:git:https://github.com/runtimeverification/k.git</connection>
    <tag>HEAD</tag>
  </scm>

  <repositories>
    <repository>
      <id>runtime.verification</id>
      <name>Runtime Verification Repository</name>
      <url>https://runtimeverification.mycloudrepo.io/public/repositories/runtimeverification</url>
      <snapshots><enabled>false</enabled></snapshots>
      <releases><enabled>true</enabled></releases>
    </repository>
    <repository>
      <id>runtime.verification.snapshots</id>
      <name>Runtime Verification Snapshot Repository</name>
      <url>https://runtimeverification.mycloudrepo.io/public/repositories/runtimeverification</url>
      <snapshots><enabled>true</enabled></snapshots>
      <releases><enabled>false</enabled></releases>
    </repository>
  </repositories>

  <pluginRepositories>
    <pluginRepository>
      <id>runtime.verification</id>
      <name>Runtime Verification Repository</name>
      <url>https://runtimeverification.mycloudrepo.io/public/repositories/runtimeverification</url>
      <snapshots><enabled>false</enabled></snapshots>
      <releases><enabled>true</enabled></releases>
    </pluginRepository>
    <pluginRepository>
      <id>runtime.verification.snapshots</id>
      <name>Runtime Verification Snapshot Repository</name>
      <url>https://runtimeverification.mycloudrepo.io/public/repositories/runtimeverification</url>
      <snapshots><enabled>true</enabled></snapshots>
      <releases><enabled>false</enabled></releases>
    </pluginRepository>
  </pluginRepositories>

  <distributionManagement>
    <repository>
      <id>runtime.verification</id>
      <name>Runtime Verification Repository</name>
      <url>https://runtimeverification.mycloudrepo.io/repositories/runtimeverification</url>
    </repository>
    <snapshotRepository>
      <id>runtime.verification.snapshots</id>
      <name>Runtime Verification Snapshot Repository</name>
      <url>https://runtimeverification.mycloudrepo.io/repositories/runtimeverification</url>
    </snapshotRepository>
  </distributionManagement>

  <properties>
    <base>master</base>
    <skipCheckstyleOnWindows>true</skipCheckstyleOnWindows>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <scala.version>2.12.18</scala.version>
    <project.build.type>FastBuild</project.build.type>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.scala-lang</groupId>
      <artifactId>scala-library</artifactId>
      <version>${scala.version}</version>
    </dependency>
    <dependency>
        <groupId>org.scala-lang</groupId>
        <artifactId>scala-reflect</artifactId>
        <version>${scala.version}</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>2.23.4</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <reporting>
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>findbugs-maven-plugin</artifactId>
        <version>3.0.0</version>
        <configuration>
          <includeFilterFile>src/main/config/findbugs-include.xml</includeFilterFile>
        </configuration>
      </plugin>
    </plugins>
  </reporting>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>2.6</version>
        </plugin>
        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>2.5.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>3.1.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.17</version>
          <configuration>
            <environmentVariables>
              <!-- forcing en_US locale because of decimal separator in tests -->
              <LC_NUMERIC>en_US.UTF-8</LC_NUMERIC>
            </environmentVariables>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.7.0</version>
          <configuration>
            <source>17</source>
            <target>17</target>
          </configuration>
        </plugin>
        <!-- Antrun plugin for running arbitrary shell commands (building subprojects) -->
        <plugin>
          <artifactId>maven-antrun-plugin</artifactId>
          <version>1.7</version>
          <dependencies>
            <dependency>
              <groupId>ant-contrib</groupId>
              <artifactId>ant-contrib</artifactId>
              <version>1.0b3</version>
              <exclusions>
                <exclusion>
                  <groupId>ant</groupId>
                  <artifactId>ant</artifactId>
                </exclusion>
              </exclusions>
            </dependency>
            <dependency>
              <groupId>org.apache.ant</groupId>
              <artifactId>ant-nodeps</artifactId>
              <version>1.8.1</version>
            </dependency>
          </dependencies>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <artifactId>maven-clean-plugin</artifactId>
        <version>2.5</version>
        <configuration>
          <filesets>
            <fileset>
              <directory>src/javasources</directory>
            </fileset>
            <fileset>
              <directory>lib</directory>
            </fileset>
          </filesets>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>3.2.1</version>
        <executions>
          <execution>
            <id>checkstyle-copyright</id>
            <goals>
              <goal>check</goal>
            </goals>
            <inherited>false</inherited>
            <configuration>
              <sourceDirectories>
                <sourceDirectory>${project.basedir}</sourceDirectory>
              </sourceDirectories>
	      <includes>**/*.xml,**/*.xsd,**/*.md,**/*.k,**/*.kore,**/*.java,**/*.scala,**/*.jj,**/*.jjt,**/*.str,**/*.css,**/*.sty,**/*.tex,**/*.cls</includes>
              <configLocation>src/main/config/checkstyle-copyright.xml</configLocation>
              <failsOnError>true</failsOnError>
              <consoleOutput>true</consoleOutput>
              <excludes>.brew_home/**,hs-backend-booster/src/main/native/**,haskell-backend/src/main/native/**,llvm-backend/src/main/native/**,.idea/**,**/com/davekoelle/**,**/target/**,LICENSE.md,web/toc.md,web/k-web-theme/**,**/*-kompiled/*.kore,k-distribution/include/kframework/kore/*,**/.kompile-*/**,**/.git/**,result/**</excludes>
            </configuration>
          </execution>
          <execution>
            <id>checkstyle-k</id>
            <goals>
              <goal>check</goal>
            </goals>
            <inherited>false</inherited>
            <configuration>
              <sourceDirectories>
                <sourceDirectory>${project.basedir}</sourceDirectory>
              </sourceDirectories>
              <includeResources>false</includeResources>
              <includeTestResources>false</includeTestResources>
              <includes>**/*.k</includes>
              <excludes>hs-backend-booster/src/main/native/**,haskell-backend/src/main/native/**,llvm-backend/src/main/native/**,**/.kompile-*/**</excludes>
              <configLocation>src/main/config/checkstyle-k.xml</configLocation>
              <failsOnError>true</failsOnError>
              <consoleOutput>true</consoleOutput>
            </configuration>
          </execution>
          <execution>
            <id>checkstyle-java</id>
            <goals>
              <goal>check</goal>
            </goals>
            <configuration>
              <sourceDirectories>
                <sourceDirectory>src</sourceDirectory>
              </sourceDirectories>
              <includes>**/*.java</includes>
              <configLocation>src/main/config/checkstyle-java.xml</configLocation>
              <suppressionsLocation>src/main/config/checkstyle-suppress.xml</suppressionsLocation>
              <failsOnError>true</failsOnError>
              <consoleOutput>true</consoleOutput>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-release-plugin</artifactId>
        <version>2.5</version>
        <configuration>
          <tagNameFormat>v@{project.version}</tagNameFormat>
          <pushChanges>false</pushChanges>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <version>3.0.0-M2</version>
        <configuration>
          <rules>
            <requireJavaVersion>
              <version>[11,)</version>
            </requireJavaVersion>
          </rules>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal> enforce</goal>
            </goals>
            <id>enforce-java</id>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>linux64</id>
      <activation>
        <os>
          <family>Unix</family>
          <name>!mac os x</name>
          <arch>amd64</arch>
        </os>
      </activation>

      <properties>
        <native.arch.classifier>64</native.arch.classifier>
        <native.classifier>linux64</native.classifier>
        <native.os.classifier>linux</native.os.classifier>
        <native.exe.type>uexe</native.exe.type>
        <native.exe.extension />
        <native.script.extension />
        <make.args>--output-sync</make.args>
      </properties>
    </profile>

    <profile>
      <id>osx</id>
      <activation>
        <os>
          <family>mac</family>
        </os>
      </activation>

      <properties>
        <native.arch.classifier>64</native.arch.classifier>
        <native.classifier>osx</native.classifier>
        <native.os.classifier>osx</native.os.classifier>
        <native.exe.type>uexe</native.exe.type>
        <native.exe.extension />
        <native.script.extension />
        <prefix.path>/usr/local/opt/llvm/;/usr/local/opt/flex;/usr/local/opt/libffi</prefix.path>
        <make.args />
      </properties>
    </profile>
  </profiles>
</project>
